fix: remove obsolete account verification status
